# d4rl-slim

./: LICENSE  README.md  pyproject.toml  requirements.txt
d4rl_slim/: __init__.py  d4rl_infos.json  dataset.py  envs.py  infos.py  registry.py  tfds.py
d4rl_slim/_vendor/d4rl/: offline_env.py
d4rl_slim/_vendor/d4rl/locomotion/: __init__.py  ant.py  maze_env.py  wrappers.py
d4rl_slim/_vendor/mj_envs/: __init__.py  mujoco_env.py
d4rl_slim/_vendor/mj_envs/hand_manipulation_suite/: __init__.py  door_v0.py  hammer_v0.py  mujoco_utils.py  pen_v0.py  relocate_v0.py
d4rl_slim/_vendor/mj_envs/hand_manipulation_suite/assets/: DAPG_assets.xml
d4rl_slim/envs/: __init__.py
d4rl_slim/envs/adroit_binary/: __init__.py  door_v0.py  hammer_v0.py  mujoco_utils.py  pen_v0.py  quatmath.py  relocate_v0.py
d4rl_slim/envs/adroit_binary/assets/: DAPG_assets.xml
d4rl_slim/envs/antmaze/: ant.py  maps.py
scripts/: generate_info.py  vendor.sh  vendor_antmaze.sh
src/d4rl_slim/: __init__.py  dataset.py  tfds.py
tests/: adroit_test.py  antmaze_test.py  env_test.py  import_test.py  info_test.py  locomotion_test.py
