[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "d4rl-slim"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [{ name = "Yicheng Luo", email = "ethanluoyc@gmail.com" }]
dynamic = ["version"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["gymnasium", "tqdm", "h5py"]
[project.optional-dependencies]
mujoco = ["gymnasium[mujoco]"]

[project.urls]
Documentation = "https://github.com/unknown/d4rl-slim#readme"
Issues = "https://github.com/unknown/d4rl-slim/issues"
Source = "https://github.com/unknown/d4rl-slim"

[tool.hatch.build]
directory = "dist"

[tool.hatch.version]
path = "d4rl_slim/__about__.py"

[tool.hatch.envs.default]
features = ["mujoco"]
dependencies = [
  "pytest",
  "Cython<3",
  "d4rl @ git+https://github.com/Farama-Foundation/d4rl@master#egg=d4rl",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = ["black>=23.1.0", "ruff>=0.0.243"]
[tool.hatch.envs.lint.scripts]
style = ["ruff {args:.}", "black --check --diff {args:.}"]
fmt = ["black {args:.}", "ruff --fix {args:.}", "style"]
all = ["style", "typing"]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["orax"]
force-single-line = true
single-line-exclusions = ["typing"]
