[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "d4rl-slim"
description = 'A small package for working with D4RL datasets without D4RL dependency.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "Yicheng Luo", email = "ethanluoyc@gmail.com" }]
dynamic = ["version"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["gymnasium"]

[project.optional-dependencies]
mujoco = ["gymnasium[mujoco]", "mujoco", "numpy"]
dataset = ["h5py", "tqdm"]
all = ["gymnasium[mujoco]", "mujoco", "numpy", "h5py", "tqdm"]

[project.urls]
Documentation = "https://github.com/ethanluoyc/d4rl-slim#readme"
Issues = "https://github.com/ethanluoyc/d4rl-slim/issues"
Source = "https://github.com/ethanluoyc/d4rl-slim"

[project.entry-points."gymnasium.envs"]
__root__ = "d4rl_slim.__init__:register_d4rl_slim_envs"

[tool.hatch.build]
directory = "dist"
packages = ["src/d4rl_slim"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
features = ["all"]
dependencies = ["pytest"]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = ["black>=23.1.0", "ruff>=0.0.243"]
[tool.hatch.envs.lint.scripts]
style = ["ruff {args:.}", "black --check --diff {args:.}"]
fmt = ["black {args:.}", "ruff --fix {args:.}", "style"]
all = ["style", "typing"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | docs
  | .github
  | d4rl_slim/third_party
  | third_party
  | .venv
  | scratch
)/
'''

[tool.ruff]
line-length = 120
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I",
]
exclude = ["src/d4rl_slim/third_party", "third_party"]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["d4rl_slim"]
force-single-line = true
single-line-exclusions = ["typing"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"


[tool.pyright]
include = ["src/"]
exclude = ["src/d4rl_slim/third_party", "**/__pycache__"]

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.9"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
